--- a/views/main.ejs
+++ b/views/main.ejs
@@ -192,6 +192,9 @@
         </div>
         <% if (isLoggedIn) { %>
         <!-- If user is logged in, show search button -->
+        <div class="welcome-message">
+          <h2>Welcome, <%= user_username %></h2>
+        </div>
         <div class="search-button">
           <a href="/api/album/searchalbum" class="btn btn-primary">Search</a>
         </div>
