--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -209,6 +209,7 @@
           .then((data) => {
             console.log("Album uploaded successfully:", data);
             alert("Album uploaded successfully!");
+            window.location.href = "/JamJudge"; // Redirect to the main page
           })
           .catch((error) => {
             console.error("Error uploading album:", error);
