added album rating page !

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -149,15 +149,19 @@
       <img src="/images/Tame_Impala_-_Currents.png" alt="Image 1" />
       <img src="/images/saba.jpg" alt="Image 2" />
       <img src="/images/Mac_Miller_-_Swimming.png" alt="Image 3" />
+
+      <img src="/images/Tame_Impala_-_Currents.png" alt="Image 1" />
+      <img src="/images/backseat.jpeg" alt="Image 2" />
+      <img src="/images/Mac_Miller_-_Swimming.png" alt="Image 3" />
+
       <img src="/images/Tame_Impala_-_Currents.png" alt="Image 1" />
       <img src="/images/saba.jpg" alt="Image 2" />
       <img src="/images/Mac_Miller_-_Swimming.png" alt="Image 3" />
+
       <img src="/images/Tame_Impala_-_Currents.png" alt="Image 1" />
-      <img src="/images/saba.jpg" alt="Image 2" />
+      <img src="/images/backseat.jpeg" alt="Image 2" />
       <img src="/images/Mac_Miller_-_Swimming.png" alt="Image 3" />
-      <img src="/images/Tame_Impala_-_Currents.png" alt="Image 1" />
-      <img src="/images/saba.jpg" alt="Image 2" />
-      <img src="/images/Mac_Miller_-_Swimming.png" alt="Image 3" />
+
       <img src="/images/Tame_Impala_-_Currents.png" alt="Image 1" />
       <img src="/images/saba.jpg" alt="Image 2" />
       <img src="/images/Mac_Miller_-_Swimming.png" alt="Image 3" />
@@ -167,17 +171,22 @@
     <!-- last level -->
     <div class="image-conveyor">
       <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
-      <img src="/images/Channel_ORANGE.jpg" alt="Image 2" />
+      <img src="/images/Inrainbowscover.png" alt="Image 2" />
+
       <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
+
+      <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
+      <img src="/images/Inrainbowscover.png" alt="Image 2" />
+      <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
+
       <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
       <img src="/images/Channel_ORANGE.jpg" alt="Image 2" />
       <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
+
       <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
-      <img src="/images/Channel_ORANGE.jpg" alt="Image 2" />
+      <img src="/images/Inrainbowscover.png" alt="Image 2" />
       <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
-      <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
-      <img src="/images/Channel_ORANGE.jpg" alt="Image 2" />
-      <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
+
       <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
       <img src="/images/Channel_ORANGE.jpg" alt="Image 2" />
       <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
