--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -92,6 +92,11 @@
         padding-top: 30px;
       }
 
+      .navbar-custom {
+        background-color: #7c5c7e; /* Darker purple for navbar */
+        padding: 10px 0;
+      }
+
       /* Additional styles */
       label {
         color: #000; /* Color of text in the form */
@@ -99,6 +104,12 @@
     </style>
   </head>
   <body>
+    <nav class="navbar navbar-custom">
+      <a class="navbar-brand" href="/JamJudge">
+        <img src="/images/Group 1.png" alt="Jam Judge Logo" />
+        <img src="/images/Jam Judge.png" alt="Jam Judge" />
+      </a>
+    </nav>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
