--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -18,13 +18,14 @@
         margin-top: 50px;
       }
       .card {
-        background: #ffffff;
+        background: #3b0944;
+        color: #6a4f6b;
         border-radius: 5px;
         padding: 20px;
         text-align: center;
       }
       .btn-custom {
-        background-color: #7c5c7e;
+        background-color: #815aa1;
         color: white;
         border-radius: 20px;
         padding: 10px 25px;
@@ -36,7 +37,7 @@
       }
       .preview-box {
         height: 300px; /* Adjust as needed */
-        background-color: #f3f3f3; /* Light gray background for the preview box */
+        background-color: #3b0944; /* Light gray background for the preview box */
         border-radius: 5px;
         text-align: center;
         padding: 20px;
@@ -93,7 +94,7 @@
       }
 
       .navbar-custom {
-        background-color: #7c5c7e; /* Darker purple for navbar */
+        background-color: #3b0944; /* Darker purple for navbar */
         padding: 10px 0;
       }
 
@@ -120,7 +121,9 @@
         </div>
         <div class="col-md-6">
           <div class="card">
-            <h3 class="card-title">Upload Album</h3>
+            <h3 class="card-title">
+              <strong>Upload Album</strong>
+            </h3>
             <form id="albumForm" enctype="multipart/form-data">
               <div class="mb-3">
                 <input
