--- a/views/main.ejs
+++ b/views/main.ejs
@@ -29,10 +29,7 @@
         position: fixed;
         top: 50%; /* Center vertically */
         left: 50%; /* Center horizontally */
-        transform: translate(
-          -50%,
-          -50%
-        ); /* Adjust horizontal and vertical alignment */
+        transform: translate(-50%, -50%);
         z-index: 10; /* To ensure it's above the images */
       }
 
@@ -87,7 +84,6 @@
         }
       }
 
-      /* Apply the same animation to all conveyors */
       .image-conveyor {
         animation: moveImagesLeft 20s linear infinite;
       }
@@ -98,30 +94,36 @@
       }
 
       .image-conveyor:nth-of-type(2) {
-        bottom: 33.5%; /* Adjust based on your layout */
+        bottom: 33.5%;
       }
 
       .image-conveyor:nth-of-type(3) {
         bottom: 0;
       }
-      .auth-button, .search-button a, .upload-album-button a, .sign-out-button a {
-            background-color: #815aa1; /* Purple background */
-            color: white; /* White text */
-            border: none; /* No border */
-            border-radius: 5px; /* Rounded corners */
-            padding: 10px 20px; /* Padding inside the buttons */
-            margin: 10px; /* Space between buttons */
-            text-transform: uppercase; /* Optional: makes the button text uppercase */
-            font-weight: bold; /* Optional: makes the button text bold */
-            transition: background-color 0.3s; /* Smooth transition for hover effect */
-            text-decoration: none; /* Remove underline from links */
-            display: inline-block; /* Align items in line */
-        }
+      .auth-button,
+      .search-button a,
+      .upload-album-button a,
+      .sign-out-button a {
+        background-color: #815aa1; /* Purple background */
+        color: white; /* White text */
+        border: none; /* No border */
+        border-radius: 5px; /* Rounded corners */
+        padding: 10px 20px; /* Padding inside the buttons */
+        margin: 10px; /* Space between buttons */
+        text-transform: uppercase;
+        font-weight: bold;
+        transition: background-color 0.3s; /* Smooth transition for hover effect */
+        text-decoration: none; /* Remove underline from links */
+        display: inline-block; /* Align items in line */
+      }
 
-        /* Hover effect for buttons */
-        .auth-button:hover, .search-button a:hover, .upload-album-button a:hover, .sign-out-button a:hover {
-            background-color: #9572b8; /* Slightly lighter purple */
-        }
+      /* Hover effect for buttons */
+      .auth-button:hover,
+      .search-button a:hover,
+      .upload-album-button a:hover,
+      .sign-out-button a:hover {
+        background-color: #9572b8;
+      }
     </style>
   </head>
   <body>
@@ -159,8 +161,6 @@
         alt="Image 2"
       />
       <img src="/images/The_Strokes_-_The_New_Abnormal.png" alt="Image 3" />
-
-      <!-- More images can be added here -->
     </div>
     <!-- middle level -->
     <div class="image-conveyor">
@@ -177,20 +177,17 @@
       <img src="/images/Mac_Miller_-_Swimming.png" alt="Image 3" />
 
       <img src="/images/Tame_Impala_-_Currents.png" alt="Image 1" />
-      <img src="/images/backseat.jpeg" alt="Image 2" />
+      <img src="/images/saba.jpg" alt="Image 2" />
       <img src="/images/Mac_Miller_-_Swimming.png" alt="Image 3" />
 
       <img src="/images/Tame_Impala_-_Currents.png" alt="Image 1" />
       <img src="/images/saba.jpg" alt="Image 2" />
       <img src="/images/Mac_Miller_-_Swimming.png" alt="Image 3" />
-
-      <!-- More images can be added here -->
     </div>
     <!-- last level -->
     <div class="image-conveyor">
       <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
       <img src="/images/Inrainbowscover.png" alt="Image 2" />
-
       <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
 
       <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
@@ -198,7 +195,7 @@
       <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
 
       <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
-      <img src="/images/Channel_ORANGE.jpg" alt="Image 2" />
+      <img src="/images/Inrainbowscover.png" alt="Image 2" />
       <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
 
       <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
@@ -206,10 +203,8 @@
       <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
 
       <img src="/images/91oMFeGdQsL.jpg" alt="Image 1" />
-      <img src="/images/Channel_ORANGE.jpg" alt="Image 2" />
+      <img src="/images/Inrainbowscover.png" alt="Image 2" />
       <img src="/images/Damn.-Kendrick_Lamar.jpg" alt="Image 3" />
-
-      <!-- More images can be added here -->
     </div>
     <div class="auth-box">
       <div class="container">
@@ -224,6 +219,9 @@
         </div>
         <div class="search-button">
           <a href="/api/album/searchalbum" class="btn btn-primary">Search</a>
+          <a href="/api/ratingforalbum/myreviews" class="btn btn-primary"
+            >View My Reviews</a
+          >
         </div>
         <% if (isArtist) { %>
         <div class="upload-album-button">
