--- a/views/login.ejs
+++ b/views/login.ejs
@@ -64,13 +64,13 @@
         display: block;
       }
       .btn-purple {
-        background-color: #7c5c7e; /* Or the specific color you want */
+        background-color: #7c5c7e; 
         border: none;
-        border-radius: 20px; /* Adjust as needed to match the desired roundness */
+        border-radius: 20px; 
         color: white;
         padding: 10px 25px; /* Adjust the padding to increase or decrease button size */
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow effect */
-        font-size: 16px; /* Adjust the font size as needed */
+        font-size: 16px;
         text-align: center;
         display: inline-block;
         width: 100%; /* This will make the button expand to the full width of its parent container */
